--- a/Financiera.Infraestructura.Datos/App.config
+++ b/Financiera.Infraestructura.Datos/App.config
@@ -16,7 +16,7 @@
   </entityFramework>
   <connectionStrings>
     <add name="CadenaDeConexion" 
-         connectionString="Data Source=.;Initial Catalog=FINANCIERA;Integrated Security=True;" 
+         connectionString="Data Source=(local);Initial Catalog=Financiera;Integrated Security=True;" 
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
